# sql_mapper

./: Cargo.toml  README.md
examples/simple_select/: Cargo.toml
examples/simple_select/migrations/2022-04-30-182911_init/: down.sql  up.sql
examples/simple_select/src/: main.rs  schema.rs
sql_mapper/: Cargo.toml
sql_mapper/src/: lib.rs  macro.rs
sql_mapper/src/parse/: mod.rs  schema.rs  sql.rs
